--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        kernel_version: [ '4.14.180','4.14.186','4.14.186cfi','4.19.113', '4.19.157','5.4', '5.10', '5.15','6.1', '4.19.157op' ]
+        kernel_version: [ '4.14.180','4.14.186','4.14.186cfi','4.19.113', '4.19.157','5.4', '5.10', '5.15','6.1' ]
     steps:
 
       - uses: actions/checkout@v4
